# DeliGO-Backend

./: .env  .gitignore  Cargo.toml  HOLA.TXT  README.md  package-lock.json
crates/adapter/: Cargo.toml  lib.rs
crates/adapter/api/: mod.rs
crates/adapter/api/order_facts/: mod.rs  order_facts_payloads.rs  order_facts_presenters.rs
crates/adapter/api/product_facts/: mod.rs  product_facts_controllers.rs  product_facts_mappers.rs  product_facts_payloads.rs  product_facts_presenters.rs
crates/adapter/api/shared/: app_state.rs  error_presenter.rs  mod.rs  orders.rs  routes.rs
crates/adapter/api/user_facts/: mod.rs  user_facts_controllers.rs  user_facts_mappers.rs  user_facts_payloads.rs  user_facts_presenters.rs
crates/adapter/spi/db/: db_connection.rs  db_mappers.rs  db_product_facts_repository.rs  db_user_facts_repository.rs  mod.rs
crates/adapter/spi/db/db_models/: delivery_location.rs  mod.rs  order.rs  order_detail.rs  payment.rs  product.rs  shared.rs
crates/adapter/spi/http/: http_connection.rs  mod.rs
crates/admin/: Cargo.toml  lib.rs
crates/admin/crud_delivery_man/application/: interface.rs  mod.rs  utils.rs
crates/admin/crud_delivery_man/application/delivery_usecases/: asign_delivery_to_order_uc.rs  get_all_delivery_mans_uc.rs  get_delivery_info_by_id_uc.rs  mod.rs  update_delivery_man_uc.rs
crates/admin/crud_delivery_man/application/dto/: delivery_man_dto.rs  mod.rs
crates/admin/crud_delivery_man/domain/: model.rs  repository.rs
crates/admin/crud_delivery_man/infrastructure/: mod.rs
crates/admin/crud_delivery_man/infrastructure/api/: delivery_man_facts_controller.rs  mod.rs
crates/admin/crud_delivery_man/infrastructure/spi/: db_delivery_facts_repository.rs  db_mapper.rs  mod.rs
crates/admin/crud_delivery_man/infrastructure/spi/entity/: order.rs  prelude.rs  product.rs  sea_orm_active_enums.rs  user.rs
crates/admin/crud_product/application/: mod.rs
crates/admin/crud_product/application/dto/: mod.rs  product_dto.rs
crates/admin/crud_product/application/product_usecases/: create_product_facts_usecase.rs  delete_product_facts_usecase.rs  get_all_products_facts_usecase.rs  get_product_by_id_facts_usecase.rs  mod.rs  update_product_facts_usecase.rs
crates/admin/crud_product/domain/: repository.rs
crates/admin/crud_product/domain/models/: product.rs
crates/admin/crud_product/infrastructure/api/: mod.rs
crates/admin/crud_product/infrastructure/api/product_facts/: mod.rs  order_facts_controller.rs
crates/admin/crud_product/infrastructure/api/shared/: error_presenter.rs  mod.rs
crates/admin/crud_product/infrastructure/spi/db/: db_mapper.rs  mod.rs  (+2 more)
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/DTOs/: ProductDTOs.rs  mod.rs  user_dto.rs
crates/application/src/DTOs/order/: mod.rs
crates/application/src/DTOs/product/: mod.rs
crates/application/src/DTOs/user/: user_in_dto.rs
crates/application/src/dtos/: mod.rs  order_dto.rs
crates/application/src/dtos/product/: product_in_dto.rs  product_out_dto.rs
crates/application/src/dtos/user/: mod.rs  user_out_dto.rs
crates/application/src/impl_mappers/: product_mapper.rs  user_mapper.rs
crates/application/src/mappers/: api_mapper.rs  app_mapper.rs  mod.rs
crates/application/src/repositories/: mod.rs  order_fact_repository_abstract.rs  product_fact_repository_abstract.rs  user_fact_repository_abstract.rs
crates/application/src/usecases/: get_all_order_facts_usecase.rs  get_all_product_facts_usecase.rs  get_one_product_fact_by_id_usecase.rs  mod.rs
crates/application/src/usecases/order_fact_uc/: get_all_order_facts_usecase.rs  get_one_order_by_id_fact_usecase.rs  mod.rs
crates/application/src/usecases/product_fact_uc/: create_product_fact_usecase.rs  delete_product_by_id_fact_usecase.rs  get_all_product_facts_usecase.rs  get_one_product_fact_by_id_usecase.rs  mod.rs  update_product_fact_usecase.rs
crates/application/src/usecases/user_fact_uc/: create_user_fact_uc.rs  delete_user_fact_by_id_uc.rs  get_all_user_facts_uc.rs  get_one_user_by_id_fact_uc.rs  mod.rs  update_user_fact_uc.rs
crates/application/src/utils/: error_handling_utils.rs  mod.rs
crates/delivery_man/: Cargo.toml  lib.rs
crates/delivery_man/crud_order/application/: dtos.rs  mod.rs  ucs.rs
crates/delivery_man/crud_order/domain/: model.rs  repository.rs
crates/delivery_man/crud_order/infrastructure/: controllers.rs  mod.rs  order_repository.rs
crates/domain/: Cargo.toml  cargo.toml
crates/domain/src/: delivery_location.rs  delivery_man.rs  lib.rs  order.rs  order_detail.rs  paymant.rs  payment.rs  product.rs  shared.rs  user.rs
crates/main/: Cargo.toml  actix_web_router.rs  auth_user.rs  bootstrap.rs  main.rs
crates/orders_billing/: Cargo.toml  lib.rs
crates/orders_billing/payment_record/application/: generate_invoice.rs  mod.rs  register_payment.rs
crates/orders_billing/payment_record/domain/: model.rs  repository.rs
crates/orders_billing/payment_record/infrastructure/: generate_invoice_handler.rs  get_payment_by_order_handler.rs  mod.rs  register_payment_handler.rs  repository.rs
crates/register_login/: Cargo.toml  lib.rs
crates/register_login/credential_validation/application/: login_user.rs  mod.rs  register_user.rs
crates/register_login/credential_validation/domain/: model.rs  repository.rs
crates/register_login/credential_validation/infrastructure/: login_handler.rs  mod.rs  register_handler.rs  repository.rs
crates/register_login/credential_validation/infrastructure/entity/: order_details.rs  user.rs
crates/user/: Cargo.toml
crates/user/domain/: repository.rs
crates/user/domain/models/: enums.rs  mod.rs  product_model.rs  user_model.rs
crates/user/infrastructure/: mod.rs  parser_enums.rs  routes.rs
crates/user/infrastructure/config/: app_state.rs  boostrap.rs
crates/user/infrastructure/controller/: mod.rs  product_controller.rs  user_controller.rs
crates/user/infrastructure/entity/: mod.rs  order.rs  payment.rs  sea_orm_active_enums.rs  user.rs
crates/user/infrastructure/querys/: product_query.rs  user_query.rs
(+39 files in other folders)
