[package]
name = "deligo"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = [
  "postgres",
  "runtime-tokio-native-tls",
  "macros",
  "chrono",
] }
actix-web = "4"
log = "0.4"
env_logger = "0.10"
