[package]
name = "deligo"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
chrono = { version = "0.4", features = ["serde"] } 
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] } 
# PostgreSQL
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = "0.7.10"
deadpool-postgres = "0.12.1"
postgres-types = "0.2.6"
config = "0.13.4"

# MongoDB
mongodb = "2.8.1"
futures = "0.3.30"
bson = "2.9.0"

dotenvy = "0.15"