[workspace]
resolver = "2"
members = [
  "crates/admin",
  "crates/delivery_man",
  "crates/orders_billing",
  "crates/register_login",
  "crates/user",
  "crates/shared",
  "crates/main",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.72"
authors = ["sebastianrojas", "miguelespp", "lazaro"]
