[package]
name = "adapter"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1.0", features = ["macros", "sqlx-postgres", "runtime-async-std-native-tls"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "bigdecimal"] }
async-trait = "0.1.88"
domain = { path = "../domain" }
application = { path = "../application" }
bigdecimal = "0.4.8"
log = "0.4.27"
reqwest = "0.12.15"
derive_more = "2.0.1"
thiserror = "2.0.12"

[lib]
path = "lib.rs"