[package]
name = "admin"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]

serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
sea-orm = "1.1.13"
actix-web = "4"
derive_more = "2.0.1"
thiserror = "2.0.12"

[lib]
path = "lib.rs"