[package]
name = "application"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
async-trait = "0.1.88"
domain = { path = "../domain" }

[dev-dependencies]
mockall = "0.13.1"

[lib]
path = "src/lib.rs"