[package]
name = "domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
sea-orm = { version = "^0.12.0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
chrono = { version = "0.4", features = ["serde"] } 
bigdecimal = { version = "0.4.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
sqlx = { version = "0.7.0", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "bigdecimal"] }

[lib]
path = "src/lib.rs"