[package]
name = "domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
sea-orm = { version = "1.1.10", features = ["macros", "sqlx-postgres", "runtime-async-std-native-tls"] }
chrono = { version = "0.4", features = ["serde"] } 
bigdecimal = { version = "0.4.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
strum = "0.27"
strum_macros = "0.27"

[lib]
path = "src/lib.rs"