[package]
name = "main"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
actix-web = "4.10.1"
application = { path = "../application" }
domain = { path = "../domain" }
adapter = { path = "../adapter" }
env_logger = "0.11.8"

[[bin]]
name = "deligo"
path = "main.rs"