[package]
name = "main"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
admin = { path = "../admin" }
delivery_man = { path = "../delivery_man"}
orders_billing = { path = "../orders_billing"}
register_login = { path = "../register_login"}
shared = { path = "../shared"}
user = { path = "../user"}

tokio = { version = "1.45.1", features = ["full"] }
actix-web = "4"
dotenv = "0.15.0"

[[bin]]
name = "Schedule"
path = "main.rs"