[package]
name = "orders_billing"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
chrono = "0.4.41"
register_login = { path = "../register_login"}
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
actix-web = "4"
serde_json = "1.0.140"
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "runtime-actix-native-tls"] }
num-traits = "0.2.19"
rust_decimal = "1.37.2"
shared = { path = "../shared"}

[lib]
path = "lib.rs"