[package]
name = "register_login"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.88"
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "runtime-actix-native-tls"] }
serde = "1.0.219"

[lib]
path = "lib.rs"