[package]
name = "register_login"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.88"
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "runtime-actix-native-tls"] }
serde = "1.0.219"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
actix-web = "4"
serde_json = "1.0.140"

[lib]
path = "lib.rs"